--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
           <li>
             <a routerLink="/home">Home</a>
           <li>
-            <a routerLink="/about">About</a>
+            <button (click)="onLogout()">Logout</button>
           </li>
         </ul>
       </nav>
