--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
-<div class="flex justify-around pt-10">
+<div class="flex justify-around pt-24">
     <div
         class="w-1/2 block max-w-sm rounded-lg content-center bg-white p-6 shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700 px-10">
         <form [formGroup]="expensesForm" (ngSubmit)="submitExpense()">
-            <div class="flex items-center gap-3 my-5">
+            <div class="flex items-center gap-3 my-8">
             <!--Sum input-->
             <div class="relative" data-te-input-wrapper-init>
                 <input type="number" formControlName="sum"
@@ -38,14 +38,33 @@
                 Submit expense
             </button>
         </form>
+        <div *ngIf="isSent" role="alert" class="fixed left-24 top-14 w-200 z-50">
+            <div class="rounded-xl border border-gray-100 bg-white p-4">
+                <div role="alert" class="rounded border-s-4 border-red-500 bg-red-50 p-4">
+                    <div class="flex items-center gap-2 text-red-800">
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 24 24"
+                            fill="currentColor"
+                            class="h-5 w-5"
+                        >
+                            <path
+                                fill-rule="evenodd"
+                                d="M9.401 3.003c1.155-2 4.043-2 5.197 0l7.355 12.748c1.154 2-.29 4.5-2.599 4.5H4.645c-2.309 0-3.752-2.5-2.598-4.5L9.4 3.003zM12 8.25a.75.75 0 01.75.75v3.75a.75.75 0 01-1.5 0V9a.75.75 0 01.75-.75zm0 8.25a.75.75 0 100-1.5.75.75 0 000 1.5z"
+                                clip-rule="evenodd"
+                            ></path>
+                        </svg>
+    
+                        <strong class="block font-medium"> Expense send successfully! </strong>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="mx-auto w-3/5 overflow-hidden">
 
         </div>
     </div>
     <div class="w-1/2 px-10">
-        <canvas data-te-chart="line" data-te-dataset-label="Expenses by month"
-            data-te-labels="['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']"
-            data-te-dataset-data="[2112, 2343, 2545, 3423, 2365, 1985, 987, 2112, 2343, 2545, 3423, 2365, 1985, 987]">
-        </canvas>
-    </div>
+        <canvas id="bar-chart"></canvas>
+      </div>
 </div>
